spacing issues

--- a/style.css
+++ b/style.css
@@ -54,4 +54,9 @@ section .row p {
  text-align: left;
 }
 
+section .row p2 {
+ font-size: 15px;
+ color: #2E2E2E;
+ text-align: left;
+}
 
